# databricks-apps-mcp

./: .gitignore  .pre-commit-config.yaml  README.md  app.yaml  databricks.yml  pyproject.toml
.github/workflows/: project-bundle-cd-prod.yml  project-bundle-cd-staging.yml  project-bundle-ci.yml  project-run-tests.yml
databricks_apps_mcp/: client.py  server.py
examples/: databricks_example.yml  example_job.yml
